--- a/legal/terms.html
+++ b/legal/terms.html
@@ -17,16 +17,16 @@
     <link rel="apple-touch-icon" href="/images/icons/ayam-favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-web-app-title" content="Amor Y Algo M&aacute;s | T&eacute;rminos Y Condiciones">
-    <title>Amor Y Algo M&aacute;s | T&eacute;rminos Y Condiciones</title>
-    <meta name="description" content="Amor y algo m&aacute;s es un espacio social d&oacute;nde encontrar&aacute;s art&iacute;culos, escritos, noticias y m&aacute;s." />
+    <meta name="apple-web-app-title" content="Amor Y Algo Más | Términos Y Condiciones">
+    <title>Amor Y Algo Más | Términos Y Condiciones</title>
+    <meta name="description" content="Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más." />
     <meta property="fb:app_id" content="807980679724387">
     <meta property="fb:pages" content="107292547459829" />
     <link rel="canonical" href="https://amoryalgomas.com/legal/terms" />
     <meta property="og:locale" content="es" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Amor Y Algo M&aacute;s | T&eacute;rminos Y Condiciones" />
-    <meta property="og:description" content="Amor y algo m&aacute;s es un espacio social d&oacute;nde encontrar&aacute;s art&iacute;culos, escritos, noticias y m&aacute;s." />
+    <meta property="og:title" content="Amor Y Algo Más | Términos Y Condiciones" />
+    <meta property="og:description" content="Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más." />
     <meta property="og:url" content="https://amoryalgomas.com/legal/terms" />
     <meta property="og:image" content="https://amoryalgomas.com/images/headeramoryalgomas.jpg" />
     <meta property="og:image:secure_url" content="https://amoryalgomas.com/images/headeramoryalgomas.jpg" />
@@ -37,8 +37,8 @@
     <meta property="twitter:creator" content="@amoryalgomaspag">
     <meta property="twitter:creator:id" content="1224143030300573697">
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="Amor Y Algo M&aacute;s | T&eacute;rminos Y Condiciones">
-    <meta name="twitter:description" content="Amor y algo m&aacute;s es un espacio social d&oacute;nde encontrar&aacute;s art&iacute;culos, escritos, noticias y m&aacute;s." />
+    <meta property="twitter:title" content="Amor Y Algo Más | Términos Y Condiciones">
+    <meta name="twitter:description" content="Amor y algo más es un espacio social dónde encontrarás artículos, escritos, noticias y más." />
     <meta property="twitter:image:src" content="https://amoryalgomas.com/images/headeramoryalgomas.jpg">
     <meta property="twitter:image:width" content="1280">
     <meta property="twitter:image:height" content="640">
@@ -63,26 +63,46 @@
    <!-- Header -->
     <div class="wrap">
         <header role="banner">
-            <div class="top-bar">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-9 social">
-                            <a href="https://twitter.com/amoryalgomaspag" target="_blank"><span class="fa fa-twitter"></span></a>
-                            <a href="https://facebook.com/amoryalgomaspage" target="_blank"><span class="fa fa-facebook"></span></a>
-                            <a href="https://instagram.com/amoryalgomaspage" target="_blank"><span class="fa fa-instagram"></span></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container logo-wrap">
-                <div class="row pt-5">
-                    <div class="col-12 text-center">
-                        <a class="absolute-toggle d-block d-md-none" data-toggle="collapse" href="#navbarMenu" role="button" aria-expanded="false" aria-controls="navbarMenu"><span class="burger-lines"></span></a>
-                        <h1 class="site-logo"><a href="http://amoryalgomas.com">AYAM</a></h1>
-                    </div>
-                </div>
-            </div>
-        </header>
+			<div class="container logo-wrap">
+				<div class="row pt-5">
+					<div class="col-12 text-center">
+						<a class="absolute-toggle d-block d-md-none" data-toggle="collapse" href="#navbarMenu" role="button" aria-expanded="false" aria-controls="navbarMenu"><span class="burger-lines"></span></a>
+						<h1 class="site-logo"><a href="https://amoryalgomas.com">AYAM</a></h1>
+					</div>
+				</div>
+			</div>
+			<nav class="navbar navbar-expand-md  navbar-light bg-light">
+				<div class="container">
+					<div class="collapse navbar-collapse" id="navbarMenu">
+						<ul class="navbar-nav mx-auto">
+							<li class="nav-item">
+								<a class="nav-link" href="https://amoryalgomas.com">Inicio</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="https://amoryalgomas.com">Lo &uacute;ltimo</a>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Entretenimiento</a>
+								<div class="dropdown-menu" aria-labelledby="dropdown04">
+									<a class="dropdown-item" href="https://amoryalgomas.com/categorias/articulos">Art&iacute;culos</a>
+								</div>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categor&iacute;as</a>
+								<div class="dropdown-menu" aria-labelledby="dropdown05">
+									<a class="dropdown-item" href="https://amoryalgomas.com/categorias/memes">Memes</a>
+									<a class="dropdown-item" href="https://amoryalgomas.com/categorias/articulos">Art&iacute;culos</a>
+									<a class="dropdown-item" href="https://amoryalgomas.com/categorias/mujeres">Mujeres</a>
+								</div>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="https://amoryalgomas.com/about">About</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+		</header>
         <!-- END header -->
         <section class="site-section py-lg">
             <div class="container">
@@ -90,33 +110,33 @@
                 <div class="post-content-body">
 
                     <h2 style="text-align: center;">
-                        <strong>T&eacute;rminos y Condiciones</strong>
+                        <strong>Términos y Condiciones</strong>
                     </h2>
-                    <p style="text-align: center;">&oacute;ltima Actualizaci&oacute;n: Enero 12, 2020</p>
+                    <p style="text-align: center;">Última Actualización: Enero 12, 2020</p>
                     <p>&nbsp;</p>
                     <h2 style="text-align: center;">
-                        <strong>INFORMACI&Oacute;N RELEVANTE</strong></h2>
-                    <p>Es requisito necesario para la adquisici&oacute;n de los productos que se ofrecen en este sitio, que lea y acepte los siguientes T&eacute;rminos y Condiciones que a continuaci&oacute;n se redactan. El uso de nuestros servicios as&iacute; como la compra de nuestros productos implicar&aacute; que usted ha le&iacute;do y aceptado los T&eacute;rminos y Condiciones de Uso en el presente documento. Todas los productos &nbsp;que son ofrecidos por nuestro sitio web pudieran ser creadas, cobradas, enviadas o presentadas por una p&aacute;gina web tercera y en tal caso estar&iacute;an sujetas a sus propios T&eacute;rminos y Condiciones. En algunos casos, para adquirir un producto, ser&aacute; necesario el registro por parte del usuario, con ingreso de datos personales fidedignos y definici&oacute;n de una contraseña.</p>
-                    <p>El usuario puede elegir y cambiar la clave para su acceso de administraci&oacute;n de la cuenta en cualquier momento, en caso de que se haya registrado y que sea necesario para la compra de alguno de nuestros productos. https://amoryalgomaas.com no asume la responsabilidad en caso de que entregue dicha clave a terceros.</p>
-                    <p>Todas las compras y transacciones que se lleven a cabo por medio de este sitio web, est&aacute;n sujetas a un proceso de confirmaci&oacute;n y verificaci&oacute;n, el cual podr&iacute;a incluir la verificaci&oacute;n del stock y disponibilidad de producto, validaci&oacute;n de la forma de pago, validaci&oacute;n de la factura (en caso de existir) y el cumplimiento de las condiciones requeridas por el medio de pago seleccionado. En algunos casos puede que se requiera una verificaci&oacute;n por medio de correo electr&oacute;nico.</p>
-                    <p>Los precios de los productos ofrecidos en esta Tienda Online es v&aacute;lido solamente en las compras realizadas en este sitio web.</p>
+                        <strong>INFORMACIÓN RELEVANTE</strong></h2>
+                    <p>Es requisito necesario para la adquisición de los productos que se ofrecen en este sitio, que lea y acepte los siguientes Términos y Condiciones que a continuación se redactan. El uso de nuestros servicios así como la compra de nuestros productos implicará que usted ha leído y aceptado los Términos y Condiciones de Uso en el presente documento. Todas los productos &nbsp;que son ofrecidos por nuestro sitio web pudieran ser creadas, cobradas, enviadas o presentadas por una página web tercera y en tal caso estarían sujetas a sus propios Términos y Condiciones. En algunos casos, para adquirir un producto, será necesario el registro por parte del usuario, con ingreso de datos personales fidedignos y definición de una contraseña.</p>
+                    <p>El usuario puede elegir y cambiar la clave para su acceso de administración de la cuenta en cualquier momento, en caso de que se haya registrado y que sea necesario para la compra de alguno de nuestros productos. https://amoryalgomaas.com no asume la responsabilidad en caso de que entregue dicha clave a terceros.</p>
+                    <p>Todas las compras y transacciones que se lleven a cabo por medio de este sitio web, están sujetas a un proceso de confirmación y verificación, el cual podría incluir la verificación del stock y disponibilidad de producto, validación de la forma de pago, validación de la factura (en caso de existir) y el cumplimiento de las condiciones requeridas por el medio de pago seleccionado. En algunos casos puede que se requiera una verificación por medio de correo electrónico.</p>
+                    <p>Los precios de los productos ofrecidos en esta Tienda Online es válido solamente en las compras realizadas en este sitio web.</p>
                     <p><strong>LICENCIA</strong></p>
-                    <p>Amor y Algo M&aacute;s&nbsp; a trav&eacute;s de su sitio web concede una licencia para que los usuarios utilicen&nbsp; los productos que son vendidos en este sitio web de acuerdo a los T&eacute;rminos y Condiciones que se describen en este documento.</p>
+                    <p>Amor y Algo Más&nbsp; a través de su sitio web concede una licencia para que los usuarios utilicen&nbsp; los productos que son vendidos en este sitio web de acuerdo a los Términos y Condiciones que se describen en este documento.</p>
                     <p><strong>USO NO AUTORIZADO</strong></p>
-                    <p>En caso de que aplique (para venta de software, templetes, u otro producto de diseño y programaci&oacute;n) usted no puede colocar uno de nuestros productos, modificado o sin modificar, en un CD, sitio web o ning&oacute;n otro medio y ofrecerlos para la redistribuci&oacute;n o la reventa de ning&oacute;n tipo.</p>
+                    <p>En caso de que aplique (para venta de software, templetes, u otro producto de diseño y programación) usted no puede colocar uno de nuestros productos, modificado o sin modificar, en un CD, sitio web o ningún otro medio y ofrecerlos para la redistribución o la reventa de ningún tipo.</p>
                     <p><strong>PROPIEDAD</strong></p>
-                    <p>Usted no puede declarar propiedad intelectual o exclusiva a ninguno de nuestros productos, modificado o sin modificar. Todos los productos son propiedad &nbsp;de los proveedores del contenido. En caso de que no se especifique lo contrario, nuestros productos se proporcionan&nbsp; sin ning&oacute;n tipo de garant&iacute;a, expresa o impl&iacute;cita. En ning&oacute;n esta compañ&iacute;a ser&aacute; &nbsp;responsables de ning&oacute;n daño incluyendo, pero no limitado a, daños directos, indirectos, especiales, fortuitos o consecuentes u otras p&eacute;rdidas resultantes del uso o de la imposibilidad de utilizar nuestros productos.</p>
-                    <p><strong>POL&iacute;TICA DE REEMBOLSO Y GARANT&iacute;A</strong></p>
-                    <p>En el caso de productos que sean&nbsp; mercanc&iacute;as irrevocables no-tangibles, no realizamos reembolsos despu&eacute;s de que se env&iacute;e el producto, usted tiene la responsabilidad de entender antes de comprarlo. &nbsp;Le pedimos que lea cuidadosamente antes de comprarlo. Hacemos solamente excepciones con esta regla cuando la descripci&oacute;n no se ajusta al producto. Hay algunos productos que pudieran tener garant&iacute;a y posibilidad de reembolso pero este ser&aacute; especificado al comprar el producto. En tales casos la garant&iacute;a solo cubrir&aacute; fallas de f&aacute;brica y s&oacute;lo se har&aacute; efectiva cuando el producto se haya usado correctamente. La garant&iacute;a no cubre aver&iacute;as o daños ocasionados por uso indebido. Los t&eacute;rminos de la garant&iacute;a est&aacute;n asociados a fallas de fabricaci&oacute;n y funcionamiento en condiciones normales de los productos y s&oacute;lo se har&aacute;n efectivos estos t&eacute;rminos si el equipo ha sido usado correctamente. Esto incluye:</p>
-                    <p>– De acuerdo a las especificaciones t&eacute;cnicas indicadas para cada producto.<br>– En condiciones ambientales acorde con las especificaciones indicadas por el fabricante.<br>– En uso espec&iacute;fico para la funci&oacute;n con que fue diseñado de f&aacute;brica.
-                        <br>– En condiciones de operaci&oacute;n el&eacute;ctricas acorde con las especificaciones y tolerancias indicadas.</p>
-                    <p><strong>COMPROBACI&oacute;N ANTIFRAUDE</strong></p>
-                    <p>La compra del cliente puede ser aplazada para la comprobaci&oacute;n antifraude. Tambi&eacute;n puede ser suspendida por m&aacute;s tiempo para una investigaci&oacute;n m&aacute;s rigurosa, para evitar transacciones fraudulentas.</p>
+                    <p>Usted no puede declarar propiedad intelectual o exclusiva a ninguno de nuestros productos, modificado o sin modificar. Todos los productos son propiedad &nbsp;de los proveedores del contenido. En caso de que no se especifique lo contrario, nuestros productos se proporcionan&nbsp; sin ningún tipo de garantía, expresa o implícita. En ningún esta compañía será &nbsp;responsables de ningún daño incluyendo, pero no limitado a, daños directos, indirectos, especiales, fortuitos o consecuentes u otras pérdidas resultantes del uso o de la imposibilidad de utilizar nuestros productos.</p>
+                    <p><strong>POLÍTICA DE REEMBOLSO Y GARANTÍA</strong></p>
+                    <p>En el caso de productos que sean&nbsp; mercancías irrevocables no-tangibles, no realizamos reembolsos después de que se envíe el producto, usted tiene la responsabilidad de entender antes de comprarlo. &nbsp;Le pedimos que lea cuidadosamente antes de comprarlo. Hacemos solamente excepciones con esta regla cuando la descripción no se ajusta al producto. Hay algunos productos que pudieran tener garantía y posibilidad de reembolso pero este será especificado al comprar el producto. En tales casos la garantía solo cubrirá fallas de fábrica y sólo se hará efectiva cuando el producto se haya usado correctamente. La garantía no cubre averías o daños ocasionados por uso indebido. Los términos de la garantía están asociados a fallas de fabricación y funcionamiento en condiciones normales de los productos y sólo se harán efectivos estos términos si el equipo ha sido usado correctamente. Esto incluye:</p>
+                    <p>– De acuerdo a las especificaciones técnicas indicadas para cada producto.<br>– En condiciones ambientales acorde con las especificaciones indicadas por el fabricante.<br>– En uso específico para la función con que fue diseñado de fábrica.
+                        <br>– En condiciones de operación eléctricas acorde con las especificaciones y tolerancias indicadas.</p>
+                    <p><strong>COMPROBACIÓN ANTIFRAUDE</strong></p>
+                    <p>La compra del cliente puede ser aplazada para la comprobación antifraude. También puede ser suspendida por más tiempo para una investigación más rigurosa, para evitar transacciones fraudulentas.</p>
                     <p>
                         <strong>PRIVACIDAD</strong></p>
-                    <p>Este <a href="https://amoryalgomas.com" target="_blank">sitio web</a> https://amoryalgomas.com garantiza que la informaci&oacute;n personal que usted env&iacute;a cuenta con la seguridad necesaria. Los datos ingresados por usuario o en el caso de requerir una validaci&oacute;n de los pedidos no ser&aacute;n entregados a terceros, salvo que deba ser revelada en cumplimiento a una orden judicial o requerimientos legales.</p>
-                    <p>La suscripci&oacute;n a boletines de correos electr&oacute;nicos publicitarios es voluntaria y podr&iacute;a ser seleccionada al momento de crear su cuenta.</p>
-                    <p>Amor y Algo M&aacute;s reserva los derechos de cambiar o de modificar estos t&eacute;rminos sin previo aviso.</p>
+                    <p>Este <a href="https://amoryalgomaas.com" target="_blank">sitio web</a> https://amoryalgomaas.com garantiza que la información personal que usted envía cuenta con la seguridad necesaria. Los datos ingresados por usuario o en el caso de requerir una validación de los pedidos no serán entregados a terceros, salvo que deba ser revelada en cumplimiento a una orden judicial o requerimientos legales.</p>
+                    <p>La suscripción a boletines de correos electrónicos publicitarios es voluntaria y podría ser seleccionada al momento de crear su cuenta.</p>
+                    <p>Amor y Algo Más reserva los derechos de cambiar o de modificar estos términos sin previo aviso.</p>
 
                 </div>
             </div>
